Lock BMenuBar::_Track() atomically. Fixes #9481